--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -110,7 +110,7 @@
              <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                 <div class="icon"><i class="fa fa-desktop"></i></div>
-                <h4 class="title"><a href="encompass.html">BBMC</a></h4>
+                <h4 class="title"><a href="">BBMC</a></h4>
                 <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
               </div>
             </div>
@@ -118,7 +118,7 @@
             <div class="col-lg-6">
               <div class="box wow fadeInRight">
                 <div class="icon"><i class="fa fa-headset"></i></div>
-                <h4 class="title"><a href="velocify\velocify.html">HOH</a></h4>
+                <h4 class="title"><a href="">HOH</a></h4>
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
               </div>
             </div>
@@ -142,7 +142,7 @@
             <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                 <div class="icon"><i class="fa fa-desktop"></i></div>
-                <h4 class="title"><a href="encompass\encompass.html">Webinars</a></h4>
+                <h4 class="title"><a href="">Webinars</a></h4>
                 <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
               </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="col-lg-6">
               <div class="box wow fadeInRight">
                 <div class="icon"><i class="fa fa-headset"></i></div>
-                <h4 class="title"><a href="velocify\velocify.html">Recordings</a></h4>
+                <h4 class="title"><a href="">Recordings</a></h4>
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
               </div>
             </div>
@@ -223,8 +223,8 @@
                       <h5 class="card-title">Brian</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                      <a href="#" class="card-link">BBMC link</a>
+                      <a href="#" class="card-link">Email link</a>
                     </div>
                   </div>
             </div>
@@ -235,8 +235,8 @@
                       <h5 class="card-title">Mike</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                      <a href="#" class="card-link">BBMC link</a>
+                      <a href="#" class="card-link">Email link</a>
                     </div>
                   </div>
             </div>
@@ -247,32 +247,32 @@
                       <h5 class="card-title">Ian</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                      <a href="#" class="card-link">BBMC link</a>
+                      <a href="#" class="card-link">Email link</a>
                     </div>
                   </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding ">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign ">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">Bill</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                      <a href="#" class="card-link">BBMC link</a>
+                      <a href="#" class="card-link">Email link</a>
                     </div>
                   </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography webdesign">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">Mike</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                      <a href="#" class="card-link">BBMC link</a>
+                      <a href="#" class="card-link">Email link</a>
                     </div>
                   </div>
             </div>
